<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterFragment">

    <EditText
        android:id="@+id/candidate_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/candidate_bi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/bi"
        android:inputType="text"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/candidate_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/age"
        android:inputType="number"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/candidate_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/contact"
        android:inputType="phone"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_type" />

        <RadioButton
            android:id="@+id/exam_practice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_practice" />

        <RadioButton
            android:id="@+id/exam_theory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_theory" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_category" />

        <RadioButton
            android:id="@+id/license_heavy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_heavy"/>

        <RadioButton
            android:id="@+id/license_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_light"/>

    </RadioGroup>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>